force-app/main/default/objects/Contact/fields/Student_Success_Bolt_Demo__c.field-meta.xml
<CustomField>
    <fullName>Student_Success_Bolt_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Student Success Bolt - Demo</label>
    <type>Checkbox</type>
</CustomField>