force-app/main/default/objects/Contact/fields/Target_Utilization_Hours__c.field-meta.xml
<CustomField>
    <fullName>Target_Utilization_Hours__c</fullName>
    <formula>pse__Utilization_Target__c  *    Work_Calendar_Hours_del__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Utilization Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>