force-app/main/default/objects/Contact/fields/Total_MQL__c.field-meta.xml
<CustomField>
    <fullName>Total_MQL__c</fullName>
    <description>Sums new marketing inquiries (must be &gt; 90 days since last inquiry)</description>
    <inlineHelpText>The sum of marketing qualified inquiries</inlineHelpText>
    <label>Total MQL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>