force-app/main/default/objects/Contact/fields/Trailhead_URL__c.field-meta.xml
<CustomField>
    <fullName>Trailhead_URL__c</fullName>
    <formula>hyperlink(&quot;https://developer.salesforce.com/forums/ForumsTrailheadProfile?userId=&quot;+ SF_Dev_User_Id__c ,&quot;TrailheadURL&quot;,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trailhead URL</label>
    <type>Text</type>
</CustomField>