force-app/main/default/objects/Contact/fields/Trails__c.field-meta.xml
<CustomField>
    <fullName>Trails__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText># of Trails completed.</inlineHelpText>
    <label>Trails</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>