force-app/main/default/objects/Contact/fields/Tshirt_Size__c.field-meta.xml
<CustomField>
    <fullName>Tshirt_Size__c</fullName>
    <description>What size shirt does the rep wear?</description>
    <inlineHelpText>What size shirt does the rep wear?</inlineHelpText>
    <label>Tshirt Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>XL</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>XXL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>