force-app/main/default/objects/Contact/fields/Twitter_Feed_Install__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Feed_Install__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Twitter Feed - Install</label>
    <type>Checkbox</type>
</CustomField>