force-app/main/default/objects/Contact/fields/Twitter_URL__c.field-meta.xml
<CustomField>
    <fullName>Twitter_URL__c</fullName>
    <formula>hyperlink(&quot;https://twitter.com/&quot;+  Twitter__c  ,&quot;@&quot;+Twitter__c,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Twitter URL</label>
    <type>Text</type>
</CustomField>