force-app/main/default/objects/Contact/fields/Video_Gallery_Demo__c.field-meta.xml
<CustomField>
    <fullName>Video_Gallery_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Video Gallery - Demo</label>
    <type>Checkbox</type>
</CustomField>