force-app/main/default/objects/Contact/fields/Webassessor__c.field-meta.xml
<CustomField>
    <fullName>Webassessor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked = user webassessor account is connected to Partner Community profile</description>
    <inlineHelpText>Checked = user webassessor account is connected to Partner Community profile</inlineHelpText>
    <label>Webassessor</label>
    <type>Checkbox</type>
</CustomField>