force-app/main/default/objects/Contact/fields/Website_Inquiry_Description__c.field-meta.xml
<CustomField>
    <fullName>Website_Inquiry_Description__c</fullName>
    <label>Website Inquiry Description</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>