force-app/main/default/objects/Contact/fields/Work_Calendar_Hours_del__c.field-meta.xml
<CustomField>
    <fullName>Work_Calendar_Hours_del__c</fullName>
    <formula>IF(pse__Work_Calendar__r.Name  = &quot;Zero Hour Work Calendar&quot;,0,pse__Work_Calendar__r.pse__Week_Total_Hours__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Calendar Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>