force-app/main/default/objects/Contact/fields/X2020_PTO_Used__c.field-meta.xml
<CustomField>
    <fullName>X2020_PTO_Used__c</fullName>
    <description>This field is used to rollup 2020 PTO used on the contact record, which is then pulled into 2020 PTO Balance records.</description>
    <inlineHelpText>This field is used to rollup 2020 PTO used on the contact record, which is then pulled into 2020 PTO Balance records.</inlineHelpText>
    <label>2020 PTO Used</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>