force-app/main/default/objects/Contact/fields/X7Summits_Profile_Learn_More_Count__c.field-meta.xml
<CustomField>
    <fullName>X7Summits_Profile_Learn_More_Count__c</fullName>
    <label>7Summits Profile - Learn More Ct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>