force-app/main/default/objects/Contact/recordTypes/Trailhead.recordType-meta.xml
<RecordType>
    <fullName>Trailhead</fullName>
    <active>false</active>
    <label>Trailhead</label>
</RecordType>