force-app/main/default/objects/Contact/validationRules/Account_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Required</fullName>
    <active>true</active>
    <description>An Account is required for all Customer Contacts</description>
    <errorConditionFormula>AND(
RecordType.Name = &quot;Contact&quot;,
ISBLANK(Account.Name)
)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Account is required</errorMessage>
</ValidationRule>