force-app/main/default/objects/Contact/validationRules/Lead_Source_Not_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Source_Not_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND 
( 

NOT 
( 
OR 
( 
(RecordType.DeveloperName = &quot;Trailhead&quot;), 
(RecordType.DeveloperName = &quot;PSA_Resource&quot;), 
(Record_Type__c = &quot;Vendor&quot;), 
(Record_Type__c =&quot;Competitor&quot;) 
)
), 

ISBLANK(TEXT(Lead_Source__c)) 
)
&amp;&amp; $Profile.Name != &quot;System Administrator&quot;</errorConditionFormula>
    <errorDisplayField>Lead_Source__c</errorDisplayField>
    <errorMessage>The Lead Source is required</errorMessage>
</ValidationRule>