force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.REPORTS_TO.NAME</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
    <columns>CONTACT.PHONE1</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>7Summits</value>
    </filters>
    <label>All Contacts</label>
    <language>en_US</language>
</ListView>