force-app/main/default/objects/Contact/listViews/Copy_of_SF_VPs_Masonius.listView-meta.xml
<ListView>
    <fullName>Copy_of_SF_VPs_Masonius</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>Vertical_Market__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>Salesforce.com</value>
    </filters>
    <filters>
        <field>CONTACT.TITLE</field>
        <operation>notContain</operation>
        <value>regional,area</value>
    </filters>
    <label>SF AEs_Masonius</label>
</ListView>