force-app/main/default/objects/Contact/listViews/Fortino_Contacts.listView-meta.xml
<ListView>
    <fullName>Fortino_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Passed_to_Sales__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Fortino</value>
    </filters>
    <label>Fortino Contacts</label>
    <language>en_US</language>
</ListView>