force-app/main/default/objects/Contact/listViews/Generic_Resources.listView-meta.xml
<ListView>
    <fullName>Generic_Resources</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Generic_Resource__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Generic Resources</label>
</ListView>