force-app/main/default/objects/Contact/listViews/Inbound_Contacts.listView-meta.xml
<ListView>
    <fullName>Inbound_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Marketing</value>
    </filters>
    <label>Inbound Contacts</label>
    <language>en_US</language>
</ListView>