force-app/main/default/objects/Contact/listViews/Internal_Active_PSA_Resources.listView-meta.xml
<ListView>
    <fullName>Internal_Active_PSA_Resources</fullName>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>pse__Resource_Role__c</columns>
    <columns>Competency_Group__c</columns>
    <columns>CONTACT.REPORTS_TO.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Is_Resource_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Resource_Type__c</field>
        <operation>equals</operation>
        <value>Internal</value>
    </filters>
    <label>Internal (Active) PSA Resources</label>
    <language>en_US</language>
</ListView>