force-app/main/default/objects/Contact/listViews/Lesser_Contacts.listView-meta.xml
<ListView>
    <fullName>Lesser_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>jless</value>
    </filters>
    <label>Lesser Contacts</label>
</ListView>